// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-attribution destination: send action - all fields 1`] = `
Object {
  "anonymousId": "IN$QAksySq",
  "context": Object {
    "testType": "IN$QAksySq",
  },
  "messageId": "IN$QAksySq",
  "name": "IN$QAksySq",
  "properties": Object {
    "testType": "IN$QAksySq",
  },
  "timestamp": "IN$QAksySq",
  "traits": Object {
    "testType": "IN$QAksySq",
  },
  "type": "screen",
  "userId": "IN$QAksySq",
}
`;

exports[`Testing snapshot for actions-attribution destination: send action - required fields 1`] = `
Object {
  "messageId": "IN$QAksySq",
  "timestamp": "IN$QAksySq",
  "type": "screen",
  "userId": "IN$QAksySq",
}
`;
